trunk/tp1/src/PestParser-src/src/budapest/pest/parser/PestParser.java
/* Generated By:JavaCC: Do not edit this line. PestParser.java */
package budapest.pest.parser;

import budapest.pest.ast.params.*;
import budapest.pest.ast.proc.*;
import budapest.pest.ast.exp.*;
import budapest.pest.ast.pred.*;
import budapest.pest.ast.pred.trm.*;
import budapest.pest.ast.stmt.*;

import budapest.pest.ast.Type;

import java.util.*;

public final class PestParser implements PestParserConstants {

  final public Program Program() throws ParseException {
        int line, column;
        Procedure proc;
        List<Procedure> procs = new ArrayList<Procedure>();
    proc = Procedure();
          line = proc.line; column = proc.column;
          procs.add(proc);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      proc = Procedure();
                  procs.add(proc);
    }
          {if (true) return new Program(line, column, procs);}
    throw new Error("Missing return statement in function");
  }

  final public Procedure Procedure() throws ParseException {
        Token t;
        List<FormalParam> params;
        List<FormalParam> touches = new ArrayList<FormalParam>();
        Pred pre, post;
        Stmt stmt;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(30);
    params = FormalParams();
    jj_consume_token(31);
    pre = Precondition();
    post = Postcondition();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      jj_consume_token(32);
      touches = FormalParams();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(33);
    stmt = StmtList();
    jj_consume_token(34);
          {if (true) return new Procedure(t.beginLine, t.beginColumn, t.image,
                                                params, pre, post, touches, stmt);}
    throw new Error("Missing return statement in function");
  }

  final public List<FormalParam> FormalParams() throws ParseException {
        List<FormalParam> ret = new ArrayList<FormalParam>();
        FormalParam p;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      p = FormalParam();
                                    ret.add(p);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 35:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(35);
        p = FormalParam();
                                          ret.add(p);
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public FormalParam FormalParam() throws ParseException {
        Token t;
    t = jj_consume_token(IDENTIFIER);
                  {if (true) return new FormalParam(t.image, Type.INT);}
    throw new Error("Missing return statement in function");
  }

  final public Stmt StmtList() throws ParseException {
        Stmt stmt;
        Stmt ret;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOCAL:
    case SKIP_T:
    case IF:
    case WHILE:
    case IDENTIFIER:
    case 33:
    case 40:
    case 41:
      ret = Stmt();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LOCAL:
        case SKIP_T:
        case IF:
        case WHILE:
        case IDENTIFIER:
        case 33:
        case 40:
        case 41:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        stmt = Stmt();
                                  ret = new SeqStmt(-1, -1, ret, stmt);
      }
      break;
    default:
      jj_la1[5] = jj_gen;
                  ret = new SkipStmt(-1, -1);
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Pred Precondition() throws ParseException {
        Pred ret = null;
    jj_consume_token(36);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case TRUE:
    case FALSE:
    case FORALL:
    case EXISTS:
    case IDENTIFIER:
    case 30:
    case 45:
    case 53:
    case 56:
      ret = Pred();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Pred Postcondition() throws ParseException {
        Pred ret = null;
    jj_consume_token(37);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case TRUE:
    case FALSE:
    case FORALL:
    case EXISTS:
    case IDENTIFIER:
    case 30:
    case 45:
    case 53:
    case 56:
      ret = Pred();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Pred Invariant() throws ParseException {
        Pred ret;
    jj_consume_token(38);
    ret = Pred();
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Trm Variant() throws ParseException {
        Trm ret;
    jj_consume_token(39);
    ret = Trm();
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Stmt Stmt() throws ParseException {
        Stmt ret;
    if (jj_2_1(2)) {
      ret = CallStmt();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
        ret = IfStmt();
        break;
      case WHILE:
        ret = LoopStmt();
        break;
      case 33:
        ret = BlockStmt();
        break;
      default:
        jj_la1[8] = jj_gen;
        if (jj_2_2(3)) {
          ret = LocalDefStmt();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            ret = AssignStmt();
            break;
          case 40:
            ret = AssumeStmt();
            break;
          case 41:
            ret = AssertStmt();
            break;
          case SKIP_T:
            ret = SkipStmt();
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public CallStmt CallStmt() throws ParseException {
        Token t;
        List<ConcreteParam> params;
    t = jj_consume_token(IDENTIFIER);
    params = ConcreteParams();
          {if (true) return new CallStmt(t.beginLine, t.beginColumn, t.image, params);}
    throw new Error("Missing return statement in function");
  }

  final public List<ConcreteParam> ConcreteParams() throws ParseException {
        List<ConcreteParam> ret = new ArrayList<ConcreteParam>();
        ConcreteParam p;
    jj_consume_token(30);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case 30:
    case 45:
    case 53:
    case 56:
      p = ConcreteParam();
                                              ret.add(p);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 35:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_4;
        }
        jj_consume_token(35);
        p = ConcreteParam();
                                                    ret.add(p);
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(31);
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public ConcreteParam ConcreteParam() throws ParseException {
        Exp e;
        Token t;
    e = Exp();
          {if (true) return new IntConcreteParam(e);}
    throw new Error("Missing return statement in function");
  }

  final public BlockStmt BlockStmt() throws ParseException {
        Token t;
        Stmt stmt;
    t = jj_consume_token(33);
    stmt = StmtList();
    jj_consume_token(34);
          {if (true) return new BlockStmt(t.beginLine, t.beginColumn, stmt);}
    throw new Error("Missing return statement in function");
  }

  final public AssumeStmt AssumeStmt() throws ParseException {
        Token t;
        Pred hypothesis;
    t = jj_consume_token(40);
    hypothesis = Pred();
          {if (true) return new AssumeStmt(t.beginLine, t.beginColumn, hypothesis);}
    throw new Error("Missing return statement in function");
  }

  final public AssertStmt AssertStmt() throws ParseException {
        Token t;
        Pred query;
    t = jj_consume_token(41);
    query = Pred();
          {if (true) return new AssertStmt(t.beginLine, t.beginColumn, query);}
    throw new Error("Missing return statement in function");
  }

  final public AssignStmt AssignStmt() throws ParseException {
        VarIntExp left;
        Exp right;
    left = VarIntExp();
    jj_consume_token(42);
    right = Exp();
          {if (true) return new AssignStmt(left.line, left.column, left, right);}
    throw new Error("Missing return statement in function");
  }

  final public IfStmt IfStmt() throws ParseException {
        BoolExp condition;
        Stmt thenS;
        Stmt elseS;
        Token t;
    t = jj_consume_token(IF);
    condition = BoolExp();
    jj_consume_token(THEN);
    thenS = Stmt();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      elseS = Stmt();
      break;
    default:
      jj_la1[12] = jj_gen;
                          elseS = new SkipStmt(-1,-1);
    }
          {if (true) return new IfStmt(t.beginLine, t.beginColumn,
                                condition, thenS, elseS);}
    throw new Error("Missing return statement in function");
  }

  final public LoopStmt LoopStmt() throws ParseException {
        Pred invariant;
        Trm variant;
        Exp condition;
        Stmt body;
        Token t;
    t = jj_consume_token(WHILE);
    condition = Exp();
    invariant = Invariant();
    variant = Variant();
    jj_consume_token(DO);
    body = Stmt();
          {if (true) return new LoopStmt(t.beginLine, t.beginColumn, condition,
                invariant, variant, body);}
    throw new Error("Missing return statement in function");
  }

  final public LocalDefStmt LocalDefStmt() throws ParseException {
        VarIntExp left;
        Exp right;
        Token t;
    t = jj_consume_token(LOCAL);
    left = VarIntExp();
    jj_consume_token(42);
    right = Exp();
          {if (true) return new LocalDefStmt(t.beginLine, t.beginColumn, left, right);}
    throw new Error("Missing return statement in function");
  }

  final public SkipStmt SkipStmt() throws ParseException {
        Token t;
    t = jj_consume_token(SKIP_T);
          {if (true) return new SkipStmt(t.beginLine, t.beginColumn);}
    throw new Error("Missing return statement in function");
  }

  final public Exp Exp() throws ParseException {
        Exp ret;
    if (jj_2_3(2147483647)) {
      ret = BoolExp();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case 30:
      case 53:
      case 56:
        ret = IntExp();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExp BoolExp() throws ParseException {
        BoolExp ret;
    ret = OrExp();
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExp OrExp() throws ParseException {
        BoolExp ret, right;
    ret = AndExp();
    label_5:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(43);
      right = AndExp();
                  ret = new BinBoolExp(ret.line, ret.column,
                                        ret, BinBoolExp.Operator.OR, right);
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExp AndExp() throws ParseException {
        BoolExp ret, right;
    ret = AtomBoolExp();
    label_6:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(44);
      right = AtomBoolExp();
                  ret = new BinBoolExp(ret.line, ret.column,
                                        ret, BinBoolExp.Operator.AND, right);
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExp AtomBoolExp() throws ParseException {
        BoolExp e;
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 45:
      t = jj_consume_token(45);
      e = BoolExp();
                  {if (true) return new NotBoolExp(t.beginLine, t.beginColumn, e);}
      break;
    default:
      jj_la1[14] = jj_gen;
      if (jj_2_6(2147483647)) {
        e = RelBoolExp();
                  {if (true) return e;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 30:
          jj_consume_token(30);
          e = BoolExp();
          jj_consume_token(31);
                  {if (true) return e;}
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public RelBoolExp RelBoolExp() throws ParseException {
        IntExp left;
        RelBoolExp.Operator op;
        IntExp right;
    left = IntExp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
                      op = RelBoolExp.Operator.EQ;
      break;
    case 47:
      jj_consume_token(47);
                       op = RelBoolExp.Operator.NEQ;
      break;
    case 48:
      jj_consume_token(48);
                       op = RelBoolExp.Operator.LE;
      break;
    case 49:
      jj_consume_token(49);
                      op = RelBoolExp.Operator.LT;
      break;
    case 50:
      jj_consume_token(50);
                       op = RelBoolExp.Operator.GE;
      break;
    case 51:
      jj_consume_token(51);
                      op = RelBoolExp.Operator.GT;
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    right = IntExp();
          {if (true) return new RelBoolExp(left.line, left.column,
                left, op, right);}
    throw new Error("Missing return statement in function");
  }

  final public IntExp IntExp() throws ParseException {
        IntExp ret;
    ret = AdditiveIntExp();
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public IntExp AdditiveIntExp() throws ParseException {
        IntExp ret, right;
    ret = MultiplicativeIntExp();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
      case 53:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        right = MultiplicativeIntExp();
                  ret = new ArithIntExp(ret.line, ret.column,
                                        ret, ArithIntExp.Operator.ADD, right);
        break;
      case 53:
        jj_consume_token(53);
        right = MultiplicativeIntExp();
                  ret = new ArithIntExp(ret.line, ret.column,
                                        ret, ArithIntExp.Operator.SUBS, right);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public IntExp MultiplicativeIntExp() throws ParseException {
        IntExp ret, right;
    ret = AtomIntExp();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
      case 55:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 54:
        jj_consume_token(54);
        right = AtomIntExp();
                  ret = new ArithIntExp(ret.line, ret.column,
                                        ret, ArithIntExp.Operator.MUL, right);
        break;
      case 55:
        jj_consume_token(55);
        right = AtomIntExp();
                  ret = new ArithIntExp(ret.line, ret.column,
                                        ret, ArithIntExp.Operator.DIV, right);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }
